Mistake Fixing
(Title pix allocation too small)

--- a/init.css
+++ b/init.css
@@ -69,7 +69,7 @@ a.nav:hover, a.nav:active {
   margin-left:17%;
   margin-right:auto;
   text-align:left;
-  width:300px;
+  width:500px;
   background:rgba(255,255,255,0.5);
   font-size:300%;
   color:orange;
